--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 }
 
 body {
+    font-family: "Space Grotesk", sans-serif !important;
     overflow-x: hidden !important;
     background-color: #0F0F0F;
     font-family: Arial, Helvetica, sans-serif;
@@ -135,11 +136,10 @@ h2 {
 }
 
 @keyframes marquee {
-    from {
+    0% {
         transform: translateX(100%);
     }
-
-    to {
+    100% {
         transform: translateX(-100%);
     }
 }
